# MentalEngine

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: windows-build.yml
cmake/: CMakeHelpers.cmake
conan/profiles/linux/: debug.txt
data/shaders/chapter03/: GL02.frag  GL02.geom  GL02.vert  GL03_cube.frag  GL03_cube.vert  GL03_duck.frag  GL03_duck.vert  GLBufferDeclarations.h
scripts/: buildDebug.bat  buildProjectFiles.bat  buildRelease.bat  generateDebug.bat  generateRelease.bat  installDeps.bat
src/: main.cpp
src/glFramework/: glDebug.cpp  glDebug.hpp  glProgramPipeline.cpp  glProgramPipeline.hpp  glShaderProgram.cpp  glShaderProgram.hpp
src/image/: bitmap.cpp  bitmap.hpp  cubemapUtils.cpp  cubemapUtils.hpp
src/utils/: utils.cpp  utils.hpp
src/vulkanFramework/: vulkanUtils.cpp  vulkanUtils.hpp
